src/test/ui/const-generics/derive-debug-array-wrapper.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/derive-debug-array-wrapper.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: arrays only have std trait implementations for lengths 0..=32
  --> $DIR/derive-debug-array-wrapper.rs:6:5
   |
LL |     a: [u32; N],
   |     ^^^^^^^^^^^ the trait `std::array::LengthAtMost32` is not implemented for `[u32; _]`
   |
   = note: required because of the requirements on the impl of `std::fmt::Debug` for `[u32; _]`
   = note: required because of the requirements on the impl of `std::fmt::Debug` for `&[u32; _]`
   = note: required for the cast to the object type `dyn std::fmt::Debug`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
